# piraye

./: .gitignore  .pylintrc  CHANGELOG.md  README.md  changelog.md  examples.md  main.py  normalizer.py  normalizing_examples.md  pyproject.toml  requirements.txt  setup.py  test_performance.py  tokenizing_examples.md
.github/workflows/: publish.yml  pylint.yml  python-publish.yml  unit-test.yml
data/Characters/Arabic/: ar_alphabet.json
data/Characters/English/: en_alphabet.json
data/Characters/Persian/: fa_alphabet.json
data/Deletion/: deletions.json
data/Diacritic/: diacritics.json
data/Digits/: digits.json
data/Punctuations/: punctuations_edited.json
data/Spaces/: spaces.json
data/digits/: digits.json
data/others/: deletions.json  diacritics.json  spaces.json
data/puncs/: puncs.json
piraye/: __init__.py  normalizer.py  tokenizer.py
piraye/tasks/normalizer/: base_normalizer.py  char_config.py  character_normalizer.py  mappings.py  multi_lingual_normalizer.py  multi_lingual_normalizer_builder.py  normalization_result.py  normalized_text.py  normalizer.py  normalizer_builder.py
piraye/tasks/normalizer/data/alphabets/: ar.json  en.json
piraye/tasks/normalizer/data/others/: deletions.json  diacritics.json
piraye/tasks/normalizer/data/puncs/: puncs.json
piraye/tasks/normalizer/impl/: character_normalizer.py  multi_lingual_normalizer.py  multi_lingual_normalizer_builder.py
piraye/tasks/normalizer/normalizers/: base_normalizer.py  character_normalizer.py  multi_lingual_normalizer.py  multi_lingual_normalizer_builder.py
piraye/tasks/punc/: punctuation_restoration.py
piraye/tasks/tokenizer/: __init__.py  base_tokenizer.py  nltk_tokenizer.py  paragraph_tokenizer.py  pipeline.py  punc_tokenizer.py  regex_tokenizer.py  spacy_tokenizer.py  token.py  tokenizer.py
piraye/tasks/tokenizer/impl/: email_tokenizer.py  html_tokenizer.py  nltk_tokenizer.py  paragraph_tokenizer.py  regex_tokenizer.py  spacy_tokenizer.py  url_tokenizer.py
piraye/tasks/tokenizer/tokenizers/: base_tokenizer.py  nltk_tokenizer.py  paragraph_tokenizer.py  regex_tokenizer.py  spacy_tokenizer.py
piraye/tasks/tokenizer/tokenizers/regex_tokenizers/: __init__.py  base_regex_tokenizer.py  email_tokenizer.py  html_tokenizer.py  url_tokenizer.py
src/: __init__.py  char_config.py  mappings.py  multi_lingual_normalizer.py  multi_lingual_normalizer_builder.py  nltk_tokenizer.py  normalizer.py  normalizer_builder.py  normalizer_configuration.py  tokenizer.py
src/Model/: char_model.py
src/data/alphabets/: fa.json
src/data/others/: spaces.json
src/data/puncs/: puncs.json
test/: main.py  test_normalizer.py  test_performance.py
tests/: performance_testing.py  smoke_test.py  test_base_tokenizer.py  test_html_tokenizer.py  test_merge_tokenizer.py  test_ml_normalizer.py  test_normalizer.py  test_paragraph_tokenizer.py  test_shifts.py  test_tokenizer.py  test_tokenizer_pipeline.py
