[build-system]
requires = ["setuptools>61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piraye"
version = "0.6.1"
authors = [
    { name = "Hamed Khademi Khaledi", email = "khaledihkh@gmail.com" },
    { name = "HosseiN Khademi khaeldi", email = "hossein@arusha.dev" },
    { name = "Majid Asgiar Bidhendi", email = "majid@arusha.dev" },
]
maintainers = [
    { name = "Arusha Developers", email = "info@arusha.dev" },
]
description = "A utility for normalizing persian, arabic and english texts"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "NLP",
    "Natural Language Processing",
    "Tokenizing",
    "Normalization",
]
license = { text = "LGPLv2" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Filters",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities"
]
dependencies = [
    "nltk",
    "spacy",
    "lingua-language-detector"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests"]
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
piraye = ["**/*.json"]

[project.optional-dependencies]
dev = ["tqdm", "pytest", "pylint ==2.17.7", "flake8", "pytest", "spacy"]

[project.urls]
"Homepage" = "https://github.com/arushadev/piraye"
"Bug Tracker" = "https://github.com/arushadev/piraye/issues"
